--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
 		"@electron-toolkit/eslint-config-ts": "^3.1.0",
 		"@storybook/addon-a11y": "^9.0.17",
 		"@storybook/addon-docs": "^9.0.17",
+		"@storybook/addon-essentials": "9.0.0-alpha.12",
 		"@storybook/addon-vitest": "^9.0.17",
+		"@storybook/test": "9.0.0-alpha.2",
+		"@storybook/vue3": "^9.0.17",
 		"@storybook/vue3-vite": "^9.0.17",
 		"@stylistic/eslint-plugin": "^5.2.0",
 		"@tsconfig/node22": "^22.0.2",
