for testing purposes only

--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
 	"private": true,
 	"type": "module",
 	"scripts": {
-		"dev": "vite",
+		"dev": "vite --config config/vite.config.ts",
 		"build": "run-p type-check \"build-only {@}\" --",
-		"preview": "vite preview",
-		"build-only": "vite build",
-		"type-check": "vue-tsc --build",
-		"lint": "eslint . --fix",
-		"format": "prettier --write src/",
+		"preview": "vite preview --config config/vite.config.ts",
+		"build-only": "vite build --config config/vite.config.ts",
+		"type-check": "vue-tsc --build config/tsconfig.json",
+		"lint": "eslint . --config config/eslint.config.mjs --fix",
+		"format": "prettier --write src/ --config config/.prettierrc.yaml",
 		"storybook": "storybook dev -p 6006",
 		"build-storybook": "storybook build"
 	},
