--- a/config/tsconfig.app.json
+++ b/config/tsconfig.app.json
@@ -8,7 +8,7 @@
 			"@components/*": ["src/components/*"]
 		},
 		"lib": ["ESNext", "DOM", "DOM.Iterable"],
-		"types": ["vite/client", "vitest/globals"]
+		"types": ["vitest/globals"]
 	},
 	"include": [
 		"../src/**/*.ts",
