multiple component updates and refactoring
restructured components: now stories are stored in a dedicated `_stories` directory;

updated temporary themes;

updated PawsInput: now "input with icon" is not disabled "input with button" + small visual bug that became a feature;

added "small" variaion to PawsButton;

fixed colors for PawsResizeButton;

--- a/.gitignore
+++ b/.gitignore
@@ -58,7 +58,9 @@ coverage
 # Ignore Cypress testing artifacts.
 /cypress/videos/
 /cypress/screenshots/
-
+# Ignore temporary debug files
+image.png
+error.txt
 
 # IDE & Editor Configuration
 # -------------------------------------------------------------------
