#EJlPKi2q: Removed unnecessary/unused packages. Fixed ESLint & Prettier issues. Configured the "Paws UI" to release as an NPM package.

--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,6 @@ error.txt
 # -------------------------------------------------------------------
 # Ignore macOS folder metadata files.
 .DS_Store
+
+# npm pack
+paws-ui*.tgz
