--- a/package.json
+++ b/package.json
@@ -1,30 +1,54 @@
 {
-	"name": "paws-ui-kit",
-	"version": "0.0.0",
-	"private": true,
+	"name": "@paws/ui",
+	"version": "1.0.0",
+	"description": "Paws UI component library",
+	"private": false,
+	"homepage": "https://github.com/osupaws/paws-ui",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/osupaws/paws-ui.git"
+	},
+	"publishConfig": {
+		"registry": "https://npm.pkg.github.com/"
+	},
 	"type": "module",
+	"module": "dist/index.js",
+	"types": "dist/index.d.ts",
+	"exports": {
+		".": {
+			"require": "./dist/index.cjs",
+			"import": "./dist/index.js",
+			"types": "./dist/index.d.ts"
+		},
+		"./dist/index.css": {
+			"require": "./dist/index.css",
+			"import": "./dist/index.css"
+		}
+	},
+	"files": [
+		"dist"
+	],
 	"scripts": {
-		"dev": "vite --config config/vite.config.ts",
-		"build": "run-p type-check \"build-only {@}\" --",
-		"preview": "vite preview --config config/vite.config.ts",
-		"build-only": "vite build --config config/vite.config.ts",
+		"build": "rimraf dist && vue-tsc --declaration --emitDeclarationOnly -p config/tsconfig.build.json && vite build --config config/vite.config.ts",
+		"build:post": "pnpm pack",
 		"type-check": "vue-tsc --build config/tsconfig.json",
 		"lint": "eslint . --config config/eslint.config.mjs --fix",
-		"format": "prettier --write src/ --config config/.prettierrc.yaml",
+		"format": "prettier --write src/ --config config/.prettierrc",
 		"storybook": "storybook dev -p 6006",
 		"build-storybook": "storybook build"
 	},
+	"engines": {
+		"node": ">=22.17"
+	},
+	"peerDependencies": {
+		"vue": "^3.5.18"
+	},
 	"devDependencies": {
 		"@chromatic-com/storybook": "^4.0.1",
-		"@electron-toolkit/eslint-config-prettier": "^3.0.0",
-		"@electron-toolkit/eslint-config-ts": "^3.1.0",
-		"@storybook/addon-a11y": "^9.0.17",
 		"@storybook/addon-docs": "^9.0.17",
 		"@storybook/addon-essentials": "9.0.0-alpha.12",
-		"@storybook/addon-vitest": "^9.0.17",
 		"@storybook/core-events": "^8.6.14",
 		"@storybook/manager-api": "9.0.0-alpha.1",
-		"@storybook/test": "9.0.0-alpha.2",
 		"@storybook/theming": "9.0.0-alpha.1",
 		"@storybook/vue3": "^9.0.17",
 		"@storybook/vue3-vite": "^9.0.17",
@@ -32,27 +56,29 @@
 		"@tsconfig/node22": "^22.0.2",
 		"@types/node": "^22.15.32",
 		"@vitejs/plugin-vue": "^6.0.0",
-		"@vitest/browser": "^3.2.4",
-		"@vitest/coverage-v8": "^3.2.4",
 		"@vue/eslint-config-prettier": "^10.2.0",
 		"@vue/eslint-config-typescript": "^14.5.1",
 		"@vue/tsconfig": "^0.7.0",
 		"eslint": "^9.29.0",
+		"eslint-config-prettier": "^10.1.8",
+		"eslint-plugin-prettier": "^5.5.3",
 		"eslint-plugin-simple-import-sort": "^12.1.1",
 		"eslint-plugin-storybook": "^9.0.17",
 		"eslint-plugin-unused-imports": "^4.1.4",
 		"eslint-plugin-vue": "~10.2.0",
-		"jiti": "^2.4.2",
-		"npm-run-all2": "^8.0.4",
-		"playwright": "^1.54.1",
 		"prettier": "3.5.3",
+		"rimraf": "^6.0.1",
 		"storybook": "^9.0.17",
 		"typescript": "~5.8.0",
+		"typescript-eslint": "^8.38.0",
 		"vite": "^7.0.0",
+		"vite-plugin-dts": "^4.5.4",
 		"vite-plugin-vue-devtools": "^7.7.7",
-		"vitest": "^3.2.4",
 		"vue": "^3.5.18",
 		"vue-eslint-parser": "^10.2.0",
 		"vue-tsc": "^2.2.10"
-	}
+	},
+	"sideEffects": [
+		"**/*.css"
+	]
 }
