--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
 		"lint": "eslint . --config config/eslint.config.mjs --fix",
 		"format": "prettier --write src/ --config config/.prettierrc",
 		"storybook": "storybook dev -p 6006",
-		"build-storybook": "storybook build"
+		"build-storybook": "storybook build",
+		"prepare": "husky"
 	},
 	"engines": {
 		"node": ">=22.17"
@@ -66,6 +67,8 @@
 		"eslint-plugin-storybook": "^9.0.17",
 		"eslint-plugin-unused-imports": "^4.1.4",
 		"eslint-plugin-vue": "~10.2.0",
+		"husky": "^9.1.7",
+		"lint-staged": "^16.1.5",
 		"prettier": "3.5.3",
 		"rimraf": "^6.0.1",
 		"storybook": "^9.0.17",
@@ -80,5 +83,9 @@
 	},
 	"sideEffects": [
 		"**/*.css"
-	]
+	],
+	"lint-staged": {
+		"*.{js,ts,vue,mjs,cjs}": "eslint --config config/eslint.config.mjs",
+		"*.{js,ts,vue,mjs,cjs,json,css,md}": "prettier --check --config config/.prettierrc"
+	}
 }
