--- a/package.json
+++ b/package.json
@@ -85,7 +85,12 @@
 		"**/*.css"
 	],
 	"lint-staged": {
-		"*.{js,ts,vue,mjs,cjs}": "eslint --config config/eslint.config.mjs",
-		"*.{js,ts,vue,mjs,cjs,json,css,md}": "prettier --check --config config/.prettierrc"
+		"*.{js,ts,vue,mjs,cjs}": [
+			"eslint --config config/eslint.config.mjs",
+			"prettier --write --config config/.prettierrc"
+		],
+		"*.{json,css,md}": [
+			"prettier --write --config config/.prettierrc"
+		]
 	}
 }
