chore: upgrade to Storybook 10 and clean up repository

--- a/.gitignore
+++ b/.gitignore
@@ -1,74 +1,37 @@
-# ===================================================================
-# PAWS UI-KIT .GITIGNORE
-# Combined and cleaned from user-provided and generated rules.
-# ===================================================================
-
 # Dependencies
-# -------------------------------------------------------------------
-# Ignore the node_modules directory, where all third-party libraries are installed.
 node_modules
+.pnpm-store
 
-
-# Build & Distribution Artifacts
-# -------------------------------------------------------------------
-# Ignore Vite's default build output directory.
+# Distribution
 dist
-# Ignore Vite's SSR build output directory.
 dist-ssr
-# Ignore Storybook's static build output directory.
 storybook-static
-# Ignore TypeScript's build cache file.
-*.tsbuildinfo
-
-
-# Caching
-# -------------------------------------------------------------------
-# Ignore Vite's cache directory.
-.vite/
-
+*.tgz
 
 # Logs
-# -------------------------------------------------------------------
-# Ignore any directory named 'logs' and all files ending in .log
 logs
 *.log
-# Ignore specific debug logs from various package managers and tools.
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
-*storybook.log
+debug-storybook.log
 
+# Testing
+coverage
+.nyc_output
 
-# Local Environment Variables
-# -------------------------------------------------------------------
-# Never commit environment variables. They are machine-specific and may contain secrets.
+# Environment
 .env
 .env.local
 .env.*.local
 *.local
-.gemini
 
-
-# Testing
-# -------------------------------------------------------------------
-# Ignore test coverage reports.
-coverage
-# Ignore Cypress testing artifacts.
-/cypress/videos/
-/cypress/screenshots/
-# Ignore temporary debug files
-image.png
-error.txt
-
-# IDE & Editor Configuration
-# -------------------------------------------------------------------
-# Ignore user-specific IDE settings, but keep team-wide recommendations.
+# Editor & IDE
 .vscode/*
 !.vscode/extensions.json
-
-# Ignore settings from other editors.
+!.vscode/settings.json
+!.vscode/tasks.json
 .idea
 *.suo
 *.ntvs*
@@ -76,11 +39,14 @@ error.txt
 *.sln
 *.sw?
 
+# Tooling
+.gemini
+.agent
+*.tsbuildinfo
 
-# OS-specific files
-# -------------------------------------------------------------------
-# Ignore macOS folder metadata files.
+# OS
 .DS_Store
+Thumbs.db
 
-# npm pack
-paws-ui*.tgz
+# Vite
+.vite/
