--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
 	"types": "dist/index.d.ts",
 	"exports": {
 		".": {
+			"types": "./dist/index.d.ts",
 			"require": "./dist/index.cjs",
-			"import": "./dist/index.js",
-			"types": "./dist/index.d.ts"
+			"import": "./dist/index.js"
 		},
 		"./dist/index.css": {
 			"require": "./dist/index.css",
@@ -45,14 +45,6 @@
 		"vue": "^3.5.18"
 	},
 	"devDependencies": {
-		"@chromatic-com/storybook": "^4.0.1",
-		"@storybook/addon-docs": "^9.0.17",
-		"@storybook/addon-essentials": "9.0.0-alpha.12",
-		"@storybook/core-events": "^8.6.14",
-		"@storybook/manager-api": "9.0.0-alpha.1",
-		"@storybook/theming": "9.0.0-alpha.1",
-		"@storybook/vue3": "^9.0.17",
-		"@storybook/vue3-vite": "^9.0.17",
 		"@stylistic/eslint-plugin": "^5.2.0",
 		"@tsconfig/node22": "^22.0.2",
 		"@types/node": "^22.15.32",
@@ -64,14 +56,12 @@
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-prettier": "^5.5.3",
 		"eslint-plugin-simple-import-sort": "^12.1.1",
-		"eslint-plugin-storybook": "^9.0.17",
 		"eslint-plugin-unused-imports": "^4.1.4",
 		"eslint-plugin-vue": "~10.2.0",
 		"husky": "^9.1.7",
 		"lint-staged": "^16.1.5",
 		"prettier": "3.5.3",
 		"rimraf": "^6.0.1",
-		"storybook": "^9.0.17",
 		"typescript": "~5.8.0",
 		"typescript-eslint": "^8.38.0",
 		"vite": "^7.0.0",
@@ -79,19 +69,35 @@
 		"vite-plugin-vue-devtools": "^7.7.7",
 		"vue": "^3.5.18",
 		"vue-eslint-parser": "^10.2.0",
-		"vue-tsc": "^2.2.10"
+		"vue-tsc": "^2.2.10",
+		"storybook": "^10.1.11",
+		"@storybook/vue3-vite": "^10.1.11",
+		"@chromatic-com/storybook": "^5.0.0",
+		"@storybook/addon-vitest": "^10.1.11",
+		"@storybook/addon-a11y": "^10.1.11",
+		"@storybook/addon-docs": "^10.1.11",
+		"eslint-plugin-storybook": "^10.1.11",
+		"vitest": "^4.0.17",
+		"playwright": "^1.57.0",
+		"@vitest/browser-playwright": "^4.0.17",
+		"@vitest/coverage-v8": "^4.0.17"
 	},
 	"sideEffects": [
 		"**/*.css"
 	],
 	"lint-staged": {
 		"*.{js,ts,vue,mjs,cjs}": [
-			"eslint --config config/eslint.config.mjs",
+			"eslint --config config/eslint.config.mjs --fix",
 			"prettier --write --config config/.prettierrc"
 		],
 		"*.{json,css,md}": [
 			"prettier --write --config config/.prettierrc"
 		]
 	},
-	"packageManager": "pnpm@10.16.1+sha512.0e155aa2629db8672b49e8475da6226aa4bdea85fdcdfdc15350874946d4f3c91faaf64cbdc4a5d1ab8002f473d5c3fcedcd197989cf0390f9badd3c04678706"
+	"packageManager": "pnpm@10.16.1+sha512.0e155aa2629db8672b49e8475da6226aa4bdea85fdcdfdc15350874946d4f3c91faaf64cbdc4a5d1ab8002f473d5c3fcedcd197989cf0390f9badd3c04678706",
+	"eslintConfig": {
+		"extends": [
+			"plugin:storybook/recommended"
+		]
+	}
 }
