--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
 		"vue-eslint-parser": "^10.2.0",
 		"vue-tsc": "^2.2.10",
 		"storybook": "^10.1.11",
+		"@storybook/vue3": "^10.1.11",
 		"@storybook/vue3-vite": "^10.1.11",
 		"@chromatic-com/storybook": "^5.0.0",
 		"@storybook/addon-vitest": "^10.1.11",
