--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@osupaws/paws-ui",
-	"version": "0.0.2",
+	"version": "0.1.0-alpha",
 	"description": "Paws UI component library",
 	"private": false,
 	"homepage": "https://github.com/osupaws/paws-ui",
